Fixed copy to clipboard and made text nowrap

--- a/src/styles/modifiers.css
+++ b/src/styles/modifiers.css
@@ -10,3 +10,6 @@ dialog[open] {
     display: none;
 }
 
+.nowrap {
+    text-wrap: nowrap;
+}
